--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^16.0.0",
@@ -97,6 +99,7 @@
     "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "reactstrap": "^8.9.0",
