--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,11 @@
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.1",
+    "ncu": "^0.2.1",
     "nodemailer": "^6.6.2",
+    "nodemon": "^2.0.12",
     "passport": "^0.4.0",
     "passport-azure-ad-oauth2": "^0.0.4",
-    "passport-twitter": "^1.0.4",
     "pg": "^8.6.0",
     "sequelize": "^6.6.4"
   },
