--- a/client/package.json
+++ b/client/package.json
@@ -116,6 +116,7 @@
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-manifest-plugin": "^4.0.2"
+    "webpack-manifest-plugin": "^4.0.2",
+    "xlsx": "^0.17.1"
   }
 }
