--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.16.2",
     "cross-env": "^7.0.3",
+    "file-saver": "^2.0.5",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "html-webpack-include-assets-plugin": "^2.0.0",
