--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter-oauth",
+  "name": "dashboard-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "express-graphql": "^0.12.0",
     "express-session": "^1.15.6",
@@ -25,7 +26,7 @@
     "mongoose": "^5.4.1",
     "ncu": "^0.2.1",
     "nodemailer": "^6.6.2",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "passport": "^0.4.0",
     "passport-azure-ad-oauth2": "^0.0.4",
     "pg": "^8.6.0",
