--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 SERVER_PORT=4000
 HOST_URL='https://apps.gdceur.eecloud.dynamic.nsn-net.net/dashboard/auth/azure/redirect'
 AAD_AUTH_URL='https://login.microsoftonline.com/'
-AAD_AUTH_CLIENTID='6181870f-f95d-482e-9956-0ccc95ae9789'
-AAD_AUTH_CLIENTSECRET='B6rFwdW6-adys1~-jj.1FJcP2~D..zL9XD'
+AAD_AUTH_CLIENTID='b654041a-e6b7-4e06-952c-9ff44a6bec1a'
+AAD_AUTH_CLIENTSECRET='xq~yzhdkK_a9SJwEJM~ZR..~2ar4-gPy29'
 AAD_AUTH_TENANT='5d471751-9675-428d-917b-70f44f9630b0'
 MS_GRAPH_URL='https://graph.microsoft.com/'
 DB_HOST='10.129.210.150'
