--- a/server/package.json
+++ b/server/package.json
@@ -11,26 +11,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.25.2",
-    "apollo-server-express": "^2.25.2",
+    "apollo-server": "^3.6.3",
+    "apollo-server-express": "^3.6.3",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.3",
-    "cookie-session": "^2.0.0-beta.3",
+    "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.16.4",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "express-graphql": "^0.12.0",
-    "express-session": "^1.15.6",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.1",
     "ncu": "^0.2.1",
-    "nodemailer": "^6.6.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
-    "passport": "^0.4.0",
+    "passport": "^0.5.2",
     "passport-azure-ad-oauth2": "^0.0.4",
-    "pg": "^8.6.0",
-    "sequelize": "^6.6.4"
+    "passport-oauth2-refresh": "^2.1.0",
+    "pg": "^8.7.3",
+    "raw-body": "^2.5.0",
+    "sequelize": "^6.16.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
