--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter-authentication",
+  "name": "dashboard-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,6 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
-    "@types/lodash": "^4.14.172",
     "@types/webpack-env": "^1.16.2",
     "@webpack-cli/serve": "^1.5.2",
     "babel-jest": "^27.0.6",
@@ -46,7 +45,6 @@
     "@apollo/client": "^3.5.9",
     "@apollo/react-hooks": "^4.0.0",
     "@babel/runtime": "^7.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -57,8 +55,6 @@
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
-    "ag-grid-enterprise": "^26.0.0",
-    "ag-grid-react": "^26.0.0",
     "apollo-boost": "^0.4.9",
     "body-scroll-lock": "^3.1.5",
     "bootstrap": "^5.1.0",
@@ -81,14 +77,10 @@
     "react": "17.0.2",
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^1.6.1",
-    "react-bootstrap-icons": "^1.5.0",
-    "react-datepicker": "^4.2.0",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.3.4",
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.12.2",
-    "react-horizontal-scrolling-menu": "^2.0.6",
     "react-hot-loader": "^4.13.0",
     "react-i18next": "^11.11.4",
     "react-moment": "^1.1.1",
@@ -96,7 +88,6 @@
     "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.2.1",
-    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "reactstrap": "^8.9.0",
