--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ AAD_AUTH_CLIENTID='b654041a-e6b7-4e06-952c-9ff44a6bec1a'
 AAD_AUTH_CLIENTSECRET='xq~yzhdkK_a9SJwEJM~ZR..~2ar4-gPy29'
 AAD_AUTH_TENANT='5d471751-9675-428d-917b-70f44f9630b0'
 MS_GRAPH_URL='https://graph.microsoft.com/'
-DB_HOST='10.129.210.150'
+DB_HOST='10.129.209.85'
 DB_USER='postgres'
-DB_PASSWORD="fJdyP2Dyj@&6v!5hMM#VD"
+DB_PASSWORD="4y7sV96vA9wv46VR"
 DB='tacdb'
 DB2='npt'
 
